# sector_shift

./: .gitignore  Cargo.toml  Readme.md  rustfmt.toml
sector_shift_core/: Cargo.toml
sector_shift_core/src/: lib.rs  sector_shift_core_plugin.rs
sector_shift_core/src/enemies/: enemies_plugin.rs  mod.rs
sector_shift_core/src/enemies/assets/: enemy_asset.rs  mod.rs
sector_shift_core/src/enemies/components/: enemy.rs  mod.rs
sector_shift_core/src/enemies/functions/: mod.rs  spawn_enemy.rs
sector_shift_core/src/enemies/resources/: enemy_definition.rs  enemy_library.rs  enemy_model_data.rs  mod.rs
sector_shift_core/src/enemies/systems/: enemies_loaded.rs  load_enemies.rs  mod.rs  process_enemies.rs
sector_shift_core/src/environment/: env_plugin.rs  mod.rs
sector_shift_core/src/environment/assets/: env_asset.rs  mod.rs
sector_shift_core/src/environment/components/: mod.rs  skybox.rs
sector_shift_core/src/environment/resources/: env_definition.rs  env_library.rs  mod.rs
sector_shift_core/src/environment/systems/: env_loaded.rs  mod.rs  process_env.rs
sector_shift_core/src/items/: items_plugin.rs  mod.rs
sector_shift_core/src/items/assets/: item_asset.rs  mod.rs
sector_shift_core/src/items/components/: item.rs  mod.rs
sector_shift_core/src/maps/: door_axis.rs  level.rs  map_object.rs  mod.rs  tile_type.rs
sector_shift_core/src/utils/: all_assets_loaded.rs  helpers.rs  mod.rs  utils_plugin.rs
sector_shift_game/: Cargo.toml
sector_shift_game/src/: constants.rs  main.rs
sector_shift_game/src/actors/: actors_plugin.rs  mod.rs
sector_shift_game/src/inputs/: inputs_plugin.rs  mod.rs
sector_shift_game/src/items/: items_plugin.rs  mod.rs
sector_shift_game/src/maps/: maps_plugin.rs  mod.rs
sector_shift_game/src/states/: mod.rs  states_plugin.rs
sector_shift_game/src/ui/: mod.rs  ui_plugin.rs
(+110 files in other folders)
