[package]
name = "sector_shift_game"
version = "0.1.0"
edition = "2024"

[features]
dev = [
  "bevy/debug",
  "bevy/dynamic_linking",
  "dep:bevy_egui",
  "dep:bevy-inspector-egui",
]

[dependencies]
sector_shift_core = { workspace = true }

avian3d = { workspace = true }
bevy = { workspace = true }
bevy_egui = { workspace = true, optional = true }
bevy-inspector-egui = { workspace = true, optional = true }
bitcode = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints.clippy]
module_inception = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

